
[TestNoTypeAssertion/invalid-0 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:21)
Message: Type assertion `as any`. The expression type is `string`. Try removing the assertion or narrowing the type instead.
   2 |             const x: string = "hello";
   3 |             const y = x as any;
     |                       ~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-1 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:24)
Message: Type assertion `as string`. The expression type is `string | number`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: string | number;
   3 |             const y = x as string;
     |                       ~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-2 - 1]
Diagnostic 1: typeAssertionRedundant (3:14 - 3:24)
Message: Type assertion `as string` is redundant, the expression already has this type. Remove the assertion.
   2 |             const x: string = "hello";
   3 |             const y = x as string;
     |                       ~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-3 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:22)
Message: Type assertion `as string`. The expression type is `string | number`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: string | number;
   3 |             const y = <string>x;
     |                       ~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-4 - 1]
Diagnostic 1: typeAssertion (2:14 - 2:31)
Message: Type assertion `as unknown`. The expression type is `"hello"`. Try removing the assertion or narrowing the type instead.
   1 | 
   2 |             const x = "hello" as unknown;
     |                       ~~~~~~~~~~~~~~~~~~
   3 |         
---

[TestNoTypeAssertion/invalid-5 - 1]
Diagnostic 1: typeAssertionFromAny (3:14 - 3:24)
Message: Type assertion `as string` from `any`. Consider adding a type annotation at the source instead.
   2 |             declare const x: any;
   3 |             const y = x as string;
     |                       ~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-6 - 1]
Diagnostic 1: typeAssertionFromAny (3:14 - 3:24)
Message: Type assertion `as string` from `unknown`. Consider adding a type annotation at the source instead.
   2 |             declare const x: unknown;
   3 |             const y = x as string;
     |                       ~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-7 - 1]
Diagnostic 1: typeAssertion (4:14 - 4:22)
Message: Type assertion `as User ({ name: string; age: number })`. The expression type is `Error | User (Error | User ({ name: string; age: number }))`. Try removing the assertion or narrowing the type instead.
   3 |             declare const x: User | Error;
   4 |             const y = x as User;
     |                       ~~~~~~~~~
   5 |         
---

[TestNoTypeAssertion/invalid-8 - 1]
Diagnostic 1: typeAssertion (4:14 - 4:24)
Message: Type assertion `as Config ({ host: string; port: number })`. The expression type is `Config | null (null | Config ({ host: string; port: number }))`. Try removing the assertion or narrowing the type instead.
   3 |             declare const x: Config | null;
   4 |             const y = x as Config;
     |                       ~~~~~~~~~~~
   5 |         
---

[TestNoTypeAssertion/invalid-9 - 1]
Diagnostic 1: typeAssertion (5:14 - 5:24)
Message: Type assertion `as Person ({ name: string; address: Address })`. The expression type is `Person | null (null | Person ({ name: string; address: Address }))`. Try removing the assertion or narrowing the type instead.
   4 |             declare const x: Person | null;
   5 |             const y = x as Person;
     |                       ~~~~~~~~~~~
   6 |         
---

[TestNoTypeAssertion/invalid-10 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:31)
Message: Type assertion `as string[]`. The expression type is `string[] | null`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: Array<string> | null;
   3 |             const y = x as Array<string>;
     |                       ~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-11 - 1]
Diagnostic 1: typeAssertion (4:14 - 4:29)
Message: Type assertion `as Box<number> ({ value: number })`. The expression type is `Box<number> | undefined (undefined | Box<number> ({ value: number }))`. Try removing the assertion or narrowing the type instead.
   3 |             declare const x: Box<number> | undefined;
   4 |             const y = x as Box<number>;
     |                       ~~~~~~~~~~~~~~~~
   5 |         
---

[TestNoTypeAssertion/invalid-12 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:37)
Message: Type assertion `as Map<string, number>`. The expression type is `Map<string, number> | null`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: Map<string, number> | null;
   3 |             const y = x as Map<string, number>;
     |                       ~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-13 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:33)
Message: Type assertion `as string | number`. The expression type is `string | number | boolean`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: string | number | boolean;
   3 |             const y = x as string | number;
     |                       ~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-14 - 1]
Diagnostic 1: typeAssertion (5:14 - 5:30)
Message: Type assertion `as Named & Aged`. The expression type is `Named ({ name: string })`. Try removing the assertion or narrowing the type instead.
   4 |             declare const x: Named;
   5 |             const y = x as Named & Aged;
     |                       ~~~~~~~~~~~~~~~~~
   6 |         
---

[TestNoTypeAssertion/invalid-15 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:25)
Message: Type assertion `as "hello"`. The expression type is `string`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: string;
   3 |             const y = x as "hello";
     |                       ~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-16 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:20)
Message: Type assertion `as 42`. The expression type is `number`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: number;
   3 |             const y = x as 42;
     |                       ~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-17 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:28)
Message: Type assertion `as () => void ({ () => void })`. The expression type is `(() => void) | null (null | () => void ({ () => void }))`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: (() => void) | null;
   3 |             const y = x as () => void;
     |                       ~~~~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-18 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:34)
Message: Type assertion `as [string, number]`. The expression type is `[string, number] | null`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: [string, number] | null;
   3 |             const y = x as [string, number];
     |                       ~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-19 - 1]
Diagnostic 1: typeAssertion (5:14 - 5:21)
Message: Type assertion `as Dog ({ breed: string; species: string })`. The expression type is `Animal ({ species: string })`. Try removing the assertion or narrowing the type instead.
   4 |             declare const x: Animal;
   5 |             const y = x as Dog;
     |                       ~~~~~~~~
   6 |         
---

[TestNoTypeAssertion/invalid-20 - 1]
Diagnostic 1: typeAssertionFromAny (3:14 - 3:37)
Message: Type assertion `as number` from `unknown`. The original expression type is `string`. Consider narrowing the type instead.
   2 |             declare const x: string;
   3 |             const y = (x as unknown) as number;
     |                       ~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         

Diagnostic 2: typeAssertion (3:15 - 3:26)
Message: Type assertion `as unknown`. The expression type is `string`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: string;
   3 |             const y = (x as unknown) as number;
     |                        ~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-21 - 1]
Diagnostic 1: typeAssertionFromAny (4:14 - 4:33)
Message: Type assertion `as User ({ name: string; age: number })` from `unknown`. The original expression type is `string`. Consider narrowing the type instead.
   3 |             declare const x: string;
   4 |             const y = x as unknown as User;
     |                       ~~~~~~~~~~~~~~~~~~~~
   5 |         

Diagnostic 2: typeAssertion (4:14 - 4:25)
Message: Type assertion `as unknown`. The expression type is `string`. Try removing the assertion or narrowing the type instead.
   3 |             declare const x: string;
   4 |             const y = x as unknown as User;
     |                       ~~~~~~~~~~~~
   5 |         
---

[TestNoTypeAssertion/invalid-22 - 1]
Diagnostic 1: typeAssertionFromAny (3:14 - 3:45)
Message: Type assertion `as string | boolean` from `unknown`. The original expression type is `number`. Consider narrowing the type instead.
   2 |             declare const x: number;
   3 |             const y = x as unknown as string | boolean;
     |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         

Diagnostic 2: typeAssertion (3:14 - 3:25)
Message: Type assertion `as unknown`. The expression type is `number`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: number;
   3 |             const y = x as unknown as string | boolean;
     |                       ~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-23 - 1]
Diagnostic 1: typeAssertionFromAny (4:14 - 4:33)
Message: Type assertion `as Config ({ host: string; port: number })` from `any`. The original expression type is `string`. Consider narrowing the type instead.
   3 |             declare const x: string;
   4 |             const y = (x as any) as Config;
     |                       ~~~~~~~~~~~~~~~~~~~~
   5 |         

Diagnostic 2: typeAssertion (4:15 - 4:22)
Message: Type assertion `as any`. The expression type is `string`. Try removing the assertion or narrowing the type instead.
   3 |             declare const x: string;
   4 |             const y = (x as any) as Config;
     |                        ~~~~~~~~
   5 |         
---

[TestNoTypeAssertion/invalid-24 - 1]
Diagnostic 1: typeAssertionFromAny (3:14 - 3:44)
Message: Type assertion `as string` from `any`. The original expression type is `number`. Consider narrowing the type instead.
   2 |             declare const x: number;
   3 |             const y = (x as unknown as any) as string;
     |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         

Diagnostic 2: typeAssertionFromAny (3:15 - 3:33)
Message: Type assertion `as any` from `unknown`. The original expression type is `number`. Consider narrowing the type instead.
   2 |             declare const x: number;
   3 |             const y = (x as unknown as any) as string;
     |                        ~~~~~~~~~~~~~~~~~~~
   4 |         

Diagnostic 3: typeAssertion (3:15 - 3:26)
Message: Type assertion `as unknown`. The expression type is `number`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: number;
   3 |             const y = (x as unknown as any) as string;
     |                        ~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-25 - 1]
Diagnostic 1: typeAssertionFromAny (3:14 - 3:48)
Message: Type assertion `as Map<string, number>` from `unknown`. The original expression type is `string[]`. Consider narrowing the type instead.
   2 |             declare const x: string[];
   3 |             const y = x as unknown as Map<string, number>;
     |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         

Diagnostic 2: typeAssertion (3:14 - 3:25)
Message: Type assertion `as unknown`. The expression type is `string[]`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: string[];
   3 |             const y = x as unknown as Map<string, number>;
     |                       ~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-26 - 1]
Diagnostic 1: typeAssertion (4:14 - 4:27)
Message: Type assertion `as Direction`. The expression type is `number`. Try removing the assertion or narrowing the type instead.
   3 |             declare const x: number;
   4 |             const y = x as Direction;
     |                       ~~~~~~~~~~~~~~
   5 |         
---

[TestNoTypeAssertion/invalid-27 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:33)
Message: Type assertion `as Promise<string>`. The expression type is `Promise<string> | null`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: Promise<string> | null;
   3 |             const y = x as Promise<string>;
     |                       ~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-28 - 1]
Diagnostic 1: typeAssertion (3:14 - 3:40)
Message: Type assertion `as Record<string, number>`. The expression type is `Record<string, number> | null`. Try removing the assertion or narrowing the type instead.
   2 |             declare const x: Record<string, number> | null;
   3 |             const y = x as Record<string, number>;
     |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoTypeAssertion/invalid-29 - 1]
Diagnostic 1: typeAssertion (4:14 - 4:31)
Message: Type assertion `as Partial<User>`. The expression type is `Partial<User> | null`. Try removing the assertion or narrowing the type instead.
   3 |             declare const x: Partial<User> | null;
   4 |             const y = x as Partial<User>;
     |                       ~~~~~~~~~~~~~~~~~~
   5 |         
---
